package Network;
message DataPassMsg
{
    repeated string cliqueIDs = 1 ; //Hosts that must reply to this message
    required string vectorClock=2; //the vector clock for this message
    required bytes clientMsg = 3 ; //the actually message sent
    required int32 msgID =4;
}
message AckMsg
{
	required string serverID =1 ; //This is the host ID as defined by the clique IDs
	required int32 msgID =2;
	required string vectorClock=3;
}
message MsgWrapper
{
	optional DataPassMsg dataMsg= 1;
	optional AckMsg ackMsg=2;
}
